# cpp-gmail-client

./: CMakeLists.txt  Main.cpp
Libs/MailClient/: README.txt
